primitives/api/test/tests/ui/invalid_api_version_4.rs
sp_api::decl_runtime_apis! {
	pub trait Api {
		#[api_version("1")]
		fn test(data: u64);
	}
}

fn main() {}
